public/style.css
/*bootstrap*/
@import "https://use.fontawesome.com/releases/v5.8.2/css/all.css";
@import "https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css";
@import "https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css";
/*google fonts*/
@import "https://fonts.googleapis.com/css2?family=Syne+Tactile&display=swap";
@import "https://fonts.googleapis.com/css2?family=Syne+Mono&family=Syne+Tactile&display=swap";
@import "https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&family=Syne+Mono&family=Syne+Tactile&display=swap";
@import "https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&family=Pacifico&family=Syne+Mono&family=Syne+Tactile&display=swap";
@import url('https://fonts.googleapis.com/css2?family=Alex+Brush&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Alex+Brush&family=Roboto:wght@100&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Alex+Brush&family=Londrina+Outline&family=Roboto:wght@100&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');

body {
    font-family: 'Lato', sans-serif;
}

* {
    box-sizing: border-box;
}

@font-face {
    font-family: Gruenewald;
    src: url('./fonts/Gruenewald VA normal.ttf');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: Andasia Regular;
    src: url('./fonts/Andasia-OXA3.otf');
    font-weight: normal;
    font-style: normal;

}

@font-face {
    font-family: Satisfy Regular;
    src: url('./fonts/Satisfy-Regular.ttf');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: Pi in the SciFi;
    src: url('./fonts/Pi in the SciFi.ttf');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: Neon Glow;
    src: url('/fonts/Neon Glow.ttf');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: Lovelo;
    src: url('/fonts/Lovelo Line Light.otf');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: Marquee Moon;
    src: url('/fonts/marquee moon.ttf');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: RM Typerighter medium;
    src: url('/fonts/rm_typerighter_medium.ttf');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: Paper Daisy;
    src: url('/fonts/paperdaisy-demo.ttf');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: Kiona;
    src: url('/fonts/Kiona-Regular.ttf');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: Nixie One;
    src: url('/fonts/NixieOne-Regular.ttf');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: Dolce Vita;
    src: url('/fonts/Dolce Vita.ttf');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: Bauhaus Regular;
    src: url('/fonts/Bauhaus.ttf');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: Decker;
    src: url('/fonts/Decker.ttf');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: Real Kindly Demo;
    src: url('/fonts/Real Kindly Demo.ttf');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: Red Velvet;
    src: url('/fonts/red velvet.ttf');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: Quinzey;
    src: url('/fonts/Quinzey.otf');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: Sophistica;
    src: url('/fonts/Sophistica 1.ttf');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: Hamillton;
    src: url('/fonts/Hamillton.ttf');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: Sophistica;
    src: url('/fonts/Sophistica 1.ttf');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: Lettia;
    src: url('/fonts/Lettia.ttf');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: Signature;
    src: url('/fonts/siignature.TTF');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: kevinandamandadotcom;
    src: url('/fonts/kevinandamandadotcom.ttf');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: Andrea;
    src: url('/fonts/Andrea.otf');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: vintage_MartavanEck;
    src: url('/fonts/vintage_MartavanEck.ttf');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: Yesie;
    src: url('/fonts/Yesie - Free Version.otf');
    font-weight: normal;
    font-style: normal;
}

[class*="col-"] {
    float: left;
}

.tabContent {
    display: none;
    border-top: none;
}

.tabLink {
    cursor: pointer;
    background-color: #35398e;
    height: 50px;
}

.display-container {
    background-color: grey;
    /*height: 400px;*/
}

.alignText {
    cursor: pointer;
}

.electric-pug {
    border-width: 1px;
    box-shadow: none;
    text-shadow: none;
    padding: 2px 5px;
    margin-left: 50px;
    border-color: #f3f3f3;
}

.h6 {
    margin-bottom: 10px;
    margin-top: 10px;
    font-family: 'Arial', sans-serif;
    color: #333333;
    font-size: 13pt;
    font-weight: 700;
}

.size-box {
    background-color: #E7E6E6;
    height: 25px;
}

.size {
    cursor: pointer;
    height: 50px;
}

.div2 {
    margin-left: 20px;
}

.btn {
    border: none;
}

@media only screen and (max-width: 450px) {
    .display-container {
        height: 250px;
    }
    .customText {
        width: 100%;
    }

    .div2 {
        margin: 0;
    }

    .tabLink {
        width: 20%;
    }
    .bg {
        width: 33%;
    }

    .bg_style {
        display: none;
    }

    .tabs-desktop {
        display: none;
    }
}

.bg_style {
    position: absolute;
    bottom: 0;
    width: 100%;
}

.tabs-mobile {
    position: absolute;
    bottom: 0;
    width: 100%;
}

.bg_style div {
    height: 100px;
    border: 1px solid white;
    background-repeat: no-repeat;
    background-size: 100% 100%;
    cursor: pointer;
}

.customText {
    background-image: url('');
    background-repeat: no-repeat;
    background-size: 100% 100%;
    cursor: pointer;
    z-index: 2;
    -webkit-transition: all 0.5s ease;
    -moz-transition: all 0.5s ease;
    -ms-transition: all 0.5s ease;
    -o-transition: all 0.5s ease;
    transition: all 0.5s ease;
    height: 700px;
}

.row::after {
    content: "";
    clear: both;
    display: table;
}

/* For mobile phones: */
[class*="col-"] {
    width: 100%;
}

@media only screen and (min-width: 600px) {
    .customText {
        width: 60%;
    }

    .tabs-mobile {
        display: none;
    }

    /* For tablets: */
    .col-s-1 {
        width: 8.33%;
    }

    .col-s-2 {
        width: 16.66%;
    }

    .col-s-3 {
        width: 25%;
    }

    .col-s-4 {
        width: 33.33%;
    }

    .col-s-5 {
        width: 41.66%;
    }

    .col-s-6 {
        width: 50%;
    }

    .col-s-7 {
        width: 58.33%;
    }

    .col-s-8 {
        width: 66.66%;
    }

    .col-s-9 {
        width: 75%;
    }

    .col-s-10 {
        width: 83.33%;
    }

    .col-s-11 {
        width: 91.66%;
    }

    .col-s-12 {
        width: 100%;
    }
}

@media only screen and (min-width: 768px) {
    .tabs-mobile {
        display: none;
    }

    /* For desktop: */
    .col-1 {
        width: 8.33%;
    }

    .col-2 {
        width: 16.66%;
    }

    .col-3 {
        width: 25%;
    }

    .col-4 {
        width: 33.33%;
    }

    .col-5 {
        width: 41.66%;
    }

    .col-6 {
        width: 50%;
    }

    .col-7 {
        width: 58.33%;
    }

    .col-8 {
        width: 66.66%;
    }

    .col-9 {
        width: 75%;
    }

    .col-10 {
        width: 83.33%;
    }

    .col-11 {
        width: 91.66%;
    }

    .col-12 {
        width: 100%;
    }
}

.myFont {
    cursor: pointer;
    text-align: center;
}

.myFont:hover {
    background-color: grey;
}

.file-input input[type=file] {
    padding: 8px;
    background: lightslategrey;
    color: white;
}

.img_style div {
    height: 100px;
    border: 1px solid white;
    background-repeat: no-repeat;
    background-size: 100% 100%;
    cursor: pointer;
}

